dark mode as default and fix story component layout

--- a/src/scss/components/_story.scss
+++ b/src/scss/components/_story.scss
@@ -47,11 +47,13 @@
     .title {
         width: 100%;
     }
+    .content {
+        flex-grow: 1;
+    }
     .meta {
         font-size: 1.6rem;
     }
     .source {
-        flex-grow: 1;
         margin: 1rem 0;
     }
     footer {
